--- a/Krypta/templates/Krypta/wpis_detail.html
+++ b/Krypta/templates/Krypta/wpis_detail.html
@@ -1,21 +1,74 @@
-{% extends "Krypta/base.html" %} {%load static%} {%block content%}
-<div class="text-center">
-  {% if request.user.is_superuser %}
-  <p>
-    <a
-      href="{% url 'edycja_wpisu' pk=object.id %}"
-      class="btn btn-outline-secondary"
-      >EDYTUJ</a
-    >
-  </p>
-  {% endif %}
-  <img
-    src="{{object.obraz.url}}"
-    alt="Obraz z wpisu"
-    style="width: 50%; padding: 25px"
-  />
-  <h1>{{object.tytul}}</h1>
-  <p style="color: gray">Opublikowano: {{object.data_utworzenia}}</p>
-  <div style="text-align: left">{{object.zawartosc|safe|linebreaks}}</div>
-</div>
-{%endblock%}
+{% extends "Krypta/base.html" %} {% load static %} {% block content %}
+    <div class="text-center">
+        {% if request.user.is_superuser %}
+            <p>
+                <a
+                        href="{% url 'edycja_wpisu' pk=wpis.id %}"
+                        class="btn btn-outline-secondary"
+                >EDYTUJ</a
+                >
+            </p>
+        {% endif %}
+        <img
+                src="{{ wpis.obraz.url }}"
+                alt="Obraz z wpisu"
+                style="width: 50%; padding: 25px"
+        />
+        <h1>{{ wpis.tytul }}</h1>
+        <p style="color: gray">Opublikowano: {{ wpis.data_utworzenia }}</p>
+        <div style="text-align: left">{{ wpis.zawartosc|safe|linebreaks }}</div>
+        <div>
+            <h3>Sekcja komentarzy</h3>
+            <h5>Dodaj komentarz:</h5>
+            <div style="padding: 15px;border: 1px solid;border-radius: 5px;margin-bottom:10px">
+                <textarea id="comment-content" style="width:100%"></textarea>
+                <button type="button" class="btn btn-primary" onclick="addNewComment()">Dodaj</button>
+            </div>
+            <script>
+                function getCookie(name) {
+                    let cookieValue = null;
+                    if (document.cookie && document.cookie !== "") {
+                        const cookies = document.cookie.split(";");
+                        for (let i = 0; i < cookies.length; i++) {
+                            const cookie = cookies[i].trim();
+                            // Does this cookie string begin with the name we want?
+                            if (cookie.substring(0, name.length + 1) === name + "=") {
+                                cookieValue = decodeURIComponent(
+                                    cookie.substring(name.length + 1)
+                                );
+                                break;
+                            }
+                        }
+                    }
+                    return cookieValue;
+                }
+
+                const addNewComment = () => {
+                    {% if user.is_authenticated %}
+                        fetch(
+                            "http://127.0.0.1:8000/add_comment",
+                            {
+                                method: "POST",
+                                headers: {"X-CSRFToken": getCookie("csrftoken"), 'Content-Type': 'application/json'},
+                                body: JSON.stringify(
+                                    {
+                                        content: document.getElementById("comment-content").value,
+                                        news:{{ wpis.pk }},
+                                        user:{{ user.id }}
+                                    }
+                                ),
+                            }
+                        ).then((res) => location.reload());
+                    {% else %}
+                        alert("Aby dodać komentarz należy być zalogowanym!")
+                    {% endif %}
+                }
+            </script>
+            {% for comment in comments %}
+                <div style="text-align:left; border: 1px solid;border-radius:5px;padding:5px;width:75%;margin:5px;">
+                    {{ comment.publication_date }} | {{ comment.user }}: {{ comment.content }}
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+{% endblock %}
